modified:   src/main/webapp/users/settings.html This sets up a Password page that lets the User change his/her password.

--- a/src/main/webapp/users/changePassword.html
+++ b/src/main/webapp/users/changePassword.html
@@ -2,16 +2,11 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <title>Login</title>
+    <title>Change Password</title>
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
-      <div class="lift:UserSettings"></div>
-        <p>Click <a href="/users/changePassword">here</a> to change your password.</p>
+      <div class="lift:UserPassword"></div>
     </div>
   </body>
 </html>
-
-
-
-
