--- a/src/main/webapp/sites/index.html
+++ b/src/main/webapp/sites/index.html
@@ -2,8 +2,12 @@
 <head>
 </head>
 <body class="lift:content_id=main">
-  <div class="lift:surround?with=default;at=content">
-      <div class="lift:SiteList" />
+  <div id="main" class="lift:surround?with=default;at=content">
+  <h2>Your Sites</h2>
+  <ul class="lift:SiteList">
+      <li>MySite</li>
+  </ul>
+  <div class="createButton">Create new site or no</div>
   </div>
 </body>
 </html>
