--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -3,34 +3,40 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title class="lift:Menu.title">JCPS eSchool</title>
-    <style class="lift:CSS.blueprint"></style>
-    <style class="lift:CSS.fancyType"></style>
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <title>JCPS eSchool</title>
+
+    <script id="jquery" src="/classpath/js/jquery-1.5.1.min.js" type="text/javascript"></script>
+    <script id="jquery-ui" src="/classpath/js/jquery-ui-1.8.14.custom.min.js" type="text/javascript"></script>
+    <script src="/classpath/js/eschool.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/classpath/js/superfish.js"></script>
+
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="/classpath/css/jquery-ui-1.8.14.custom.css" type="text/css"/>
     <link rel="stylesheet" href="/classpath/css/eschool.css" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="/classpath/css/superfish.css" />
 </head>
 <body>
-<div class="container">
-    <div class="column span-12 last" style="text-align: right">
-        <h1 class="alt">JCPS eSchool<img alt="" id="ajax-loader"
-                                         style="display:none; margin-bottom: 0px; margin-left: 5px"
-                                         src="/images/ajax-loader.gif"></h1>
+<div id="container">
+
+    <div style="text-align: left">
+        <h1>JCPS eSchool<img alt="" id="ajax-loader" src="/images/ajax-loader.gif"></h1>
     </div>
 
-    <hr>
-
-    <div class="column span-6 colborder sidebar">
-        <hr class="space">
-
-        <span class="lift:Menu.builder"></span>
-
-        <div class="lift:Msgs?showAll=true"></div>
-        <hr class="space"/>
-        <div class="lift:UserLoginInfo"></div>
+    <div class="NavBar">
+	    <Lift:Menu.builder
+            ul:id="NavBar"
+            ul:class="sf-menu"
+	    />
     </div>
 
-    <div class="column span-17 last">
+    <hr/>
+
+    <div>
+        <!-- This is the additional navigation bar -->
+    </div>
+
+    <div>
         <div id="content">The main content will get bound here</div>
     </div>
 
