Added the Additional Links bar

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -18,14 +18,30 @@
 </head>
 <body>
 <div id="container">
+    
+    <div id="leftBar">
+        <a href="/index"><img src="/images/jcps-logo.jpg" alt="Logo" width="100px" height="auto"></a>
+        <ul id="addNav">
+            <li>Link 0</li>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+            <li>Link 4</li>
+            <li>Link 5</li>
+            <li>Link 6</li>
+            <li>Link 7</li>
+            <li>Link 8</li>
+            <li>Link 9</li>
+        </ul>
+    </div>
 
-    <div style="text-align: left">
+    <div id="header">
         <h1>JCPS eSchool<img alt="" id="ajax-loader" src="/images/ajax-loader.gif"></h1>
     </div>
 
     <div class="NavBar">
 	    <Lift:Menu.builder
-            ul:id="NavBar"
+            ul:id="MenuList"
             ul:class="sf-menu"
 	    />
     </div>
