Added logout button

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -35,12 +35,12 @@
         </ul>
     </div>
 
-    <div id="header">
-        <p>User Info</p>
-    </div>
+    <div id="header"><div class="lift:UserLoginInfo"></div></div>
 
     <div class="NavBar">
-	    <Lift:Menu.builder expandAll="true" linkToSelf="true"
+	    <Lift:Menu.builder
+            expandAll="true"
+            linkToSelf="true"
             ul:id="MenuList"
             ul:class="sf-menu"
 	    />
