--- a/src/main/webapp/sites/list.html
+++ b/src/main/webapp/sites/list.html
@@ -7,7 +7,7 @@
       <h2 class="header">Bob Loblaw's Sites</h2>
 
       <p><div class="userHasSites">Bob Loblaw has the following three sites:</div>
-        <ul div="listOfSites">
+        <ul class="listOfSites">
             <li><a href="/sites/bob/site1">Site 1</a></li>
             <li><a href="/sites/bob/site2">Site 2</a></li>
             <li><a href="/sites/bob/site3">Site 3</a></li>
