--- a/src/main/webapp/sites/list.html
+++ b/src/main/webapp/sites/list.html
@@ -6,14 +6,14 @@
     <div class="lift:SiteList">
       <h2 class="header">Bob Loblaw's Sites</h2>
 
-      <p><div class="userHasSites">Bob Loblaw has the following three sites:</div>
+      <div><span class="userHasSites">Bob Loblaw has the following three sites:</span>
         <ul class="listOfSites">
             <li><a href="/sites/bob/site1">Site 1</a></li>
             <li><a href="/sites/bob/site2">Site 2</a></li>
             <li><a href="/sites/bob/site3">Site 3</a></li>
         </ul>
-        <a href="/sites/createSite">Create a New Site</a>
-      </p>
+        <a href="/sites/createSite" class="createLink">Create a New Site</a>
+      </div>
     </div>
   </div>
 </body>
