--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -21,7 +21,7 @@
 <div id="container">
     
     <div id="leftBar">
-        <a href="/index"><img src="/images/jcps-logo.jpg" alt="Logo" width="150px" height="auto" class="logo"></a>
+        <a href="/index" class="logoLink"><img src="/images/jcps-logo.jpg" alt="Logo" width="150px" class="logo"></a>
 
         <div id="navTree">
         <ul>
