Added support for all major browsers

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -113,13 +113,10 @@
 	    />
     </div>
 
-    <hr/>
-
-    <div>
+    <div class="contentArea">
         <div id="content">The main content will get bound here</div>
     </div>
 
-    <hr/>
 </div>
 </body>
 </html>
