Fixed the error message in Firefox

--- a/src/main/webapp/templates-hidden/wizard-all.html
+++ b/src/main/webapp/templates-hidden/wizard-all.html
@@ -3,7 +3,7 @@
   <wizard:wizard_top> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_top>
   <wizard:screen_top> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_top>
   <wizard:errors class="ui-state-error" id="errors"> <div><span class="ui-icon ui-icon-alert" id="errorIcon">  </span> <ul class="errorList"> <wizard:item> <li> <wizard:bind></wizard:bind> </li> </wizard:item> </ul> </div> </wizard:errors>
-  <div>
+  <div class="formBody">
     <wizard:fields>
       <table>
 	<tbody>
@@ -37,7 +37,7 @@
       </table>
     </wizard:fields>
   </div>
-  <div>
+  <div class="formBody">
     <table>
       <tr> 
 	<td>
