got Selenium tests kinda working

--- a/src/main/webapp/users/login.html
+++ b/src/main/webapp/users/login.html
@@ -6,6 +6,7 @@
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
+      <head_merge><title>Login</title></head_merge>
       <div class="lift:UserLogin"></div>
     </div>
   </body>
