The title is now page specific

--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -4,11 +4,14 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <title>Error!</title>
   </head>
-  <body>
-    <h1>Error!</h1>
+  <body class="lift:content_id=main">
+    <div id="main" class="lift:surround?with=default;at=content">
+        <head_merge><title>Error!</title></head_merge>
+        <h1>Error!</h1>
 
-    <p>Click to return <a href="/index">Home</a>.</p>
+        <p>Click to return <a href="/index">Home</a>.</p>
 
-    <div class="lift:Msgs"></div>
+        <div class="lift:Msgs"></div>
+    </div>
   </body>
 </html>
