--- a/src/main/webapp/sites/pageMap.html
+++ b/src/main/webapp/sites/pageMap.html
@@ -3,6 +3,7 @@
 </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
+      <head_merge><title>Site Map</title></head_merge>
       <div class="lift:PageMap">
         <h2 class="siteName">Bob's Site</h2>
 
