--- a/src/main/webapp/users/list.html
+++ b/src/main/webapp/users/list.html
@@ -5,6 +5,7 @@
 </head>
 <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default&at=content">
+        <head_merge><title>User List</title></head_merge>
         <h1>List of All Users</h1>
         <table class="lift:UserTable">
             <thead>
