--- a/src/main/webapp/users/logout.html
+++ b/src/main/webapp/users/logout.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <title>Login</title>
+    <title>Logout</title>
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
+      <head_merge><title>Logout</title></head_merge>
       <div class="lift:UserLogout"></div>
     </div>
   </body>
