--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <title>Home</title>
+    <title>JCPS eSchool</title>
   </head>
   <body class="lift:content_id=main">
 
     <div id="main" class="lift:surround?with=default;at=content">
+        <head_merge><title>Home</title></head_merge>
       <h2>Welcome to your JCPS eSchool!</h2>
     </div>
   </body>
