--- a/src/main/webapp/sites/list.html
+++ b/src/main/webapp/sites/list.html
@@ -3,6 +3,7 @@
 </head>
 <body class="lift:content_id=main">
   <div id="main" class="lift:surround?with=default;at=content">
+    <head_merge><title>Sites</title></head_merge>
     <div class="lift:SiteList">
       <h2 class="header">Bob Loblaw's Sites</h2>
 
