--- a/src/main/webapp/users/settings.html
+++ b/src/main/webapp/users/settings.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <title>Login</title>
+    <title>Settings</title>
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
+      <head_merge><title>Settings</title></head_merge>
       <div class="lift:UserSettings"></div>
         <p>Click <a href="/users/changePassword">here</a> to change your password.</p>
     </div>
