--- a/src/main/webapp/templates-hidden/wizard-all.html
+++ b/src/main/webapp/templates-hidden/wizard-all.html
@@ -1,57 +1,60 @@
 <div>
-  <wizard:screen_info><div>Page <wizard:screen_number></wizard:screen_number> of <wizard:total_screens></wizard:total_screens></div></wizard:screen_info>
-  <wizard:wizard_top> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_top>
-  <wizard:screen_top> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_top>
-  <wizard:errors class="ui-state-error" id="errors"> <div><span class="ui-icon ui-icon-alert" id="errorIcon">  </span> <ul class="errorList"> <wizard:item> <li> <wizard:bind></wizard:bind> </li> </wizard:item> </ul> </div> </wizard:errors>
-  <div class="formBody">
-    <wizard:fields>
-      <table>
-	<tbody>
-            <tr lift:bind="wizard:line">
-              <td>
-		<wizard:label>
-		  <label wizard:for="">
-		    <wizard:bind></wizard:bind>
-		  </label>
-		</wizard:label>
-		<wizard:help>
+    <wizard:screen_info><div>Page <wizard:screen_number></wizard:screen_number> of <wizard:total_screens></wizard:total_screens></div></wizard:screen_info>
+    <wizard:wizard_top> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_top>
+    <wizard:screen_top> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_top>
+    <wizard:errors class="ui-state-error ui-corner-all" id="errors"> <div><span class="ui-icon ui-icon-alert" id="errorIcon">  </span> <ul class="errorList"> <wizard:item> <li> <wizard:bind></wizard:bind> </li> </wizard:item> </ul> </div> </wizard:errors>
+    <div class="formBody">
+        <wizard:fields>
+            <table>
+                <tbody>
+                <tr lift:bind="wizard:line">
+                    <td>
+                        <wizard:label>
+                            <label wizard:for="">
+                                <wizard:bind></wizard:bind>
+                            </label>
+                        </wizard:label>
+                        <wizard:help>
 		  <span>
 		    <wizard:bind></wizard:bind>
 		  </span>
-		</wizard:help>
-		<wizard:field_errors>
-		  <ul>
-		    <wizard:error>
-		      <li>
-			<wizard:bind></wizard:bind>
-		      </li>
-		    </wizard:error>
-		  </ul>
-		</wizard:field_errors>
-              </td>
-              <td>
-		<wizard:form></wizard:form>
-	      </td>
+                        </wizard:help>
+                    </td>
+                    <td>
+                        <wizard:form></wizard:form>
+                    </td>
+                    <td>
+                        <wizard:field_errors>
+                            <ul class="errorList">
+                                <wizard:error class="ui-state-error ui-corner-all" id="fieldError">
+                                    <li>
+                                        <span class="ui-icon ui-icon-alert" id="fieldErrorIcon"> </span>
+                                        <wizard:bind></wizard:bind>
+                                    </li>
+                                </wizard:error>
+                            </ul>
+                        </wizard:field_errors>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </wizard:fields>
+    </div>
+    <div class="formBody">
+        <table>
+            <tr>
+                <td>
+                    <wizard:prev></wizard:prev>
+                </td>
+                <td>
+                    <wizard:cancel></wizard:cancel>
+                </td>
+                <td>
+                    <wizard:next></wizard:next>
+                </td>
             </tr>
-	</tbody>
-      </table>
-    </wizard:fields>
-  </div>
-  <div class="formBody">
-    <table>
-      <tr> 
-	<td>
-	  <wizard:prev></wizard:prev> 
-	</td>
-	<td>
-	  <wizard:cancel></wizard:cancel>
-	</td>
-	<td>
-	  <wizard:next></wizard:next>
-	</td>
-      </tr>
-    </table>
-  </div>
-  <wizard:screen_bottom> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_bottom>
-  <wizard:wizard_bottom> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_bottom>
+        </table>
+    </div>
+    <wizard:screen_bottom> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_bottom>
+    <wizard:wizard_bottom> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_bottom>
 </div>
