Changed the logo to one with a transparent background

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -20,7 +20,7 @@
 <div id="container">
     
     <div id="leftBar">
-        <a href="/index" class="logoLink"><img src="/images/jcps-logo.jpg" alt="Logo" width="150px" class="logo"></a>
+        <a href="/index" class="logoLink"><img src="/images/jcps-logo.png" alt="Logo" width="150px" class="logo"></a>
 
         <div id="navTree">
         <ul>
