--- a/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
+++ b/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
@@ -12,20 +12,24 @@
             theme : "advanced",
             plugins : "mathematik",
 
+            //remove old/confusing buttons, add Mathematik buttons
             theme_advanced_disable : "hr,removeformat,visualaid,sub,sup,charmap",
-            theme_advanced_buttons3 : "squareroot,fraction,|,sumpopup"
+            theme_advanced_buttons3 : "squareroot,fraction,|,sumpopup,prodpopup,|,exp,subsc,|,greek"
         });
     </script>
     <script type="text/javascript">
         (function() {
+            //updates the MathJax display
             window.RenderTeX = function() {
                 var math = MathJax.Hub.getAllJax("output")[0];
                 var input = tinyMCE.activeEditor.getContent().replace(/<[^>]*>?/g, '').replace(/[*]/g, '\\cdot').replace(/(\d+)[/](\d+)/g, '\\frac{$1}{$2}').replace(/[/]/g, '\\div').replace(/&nbsp;/g, '');
                 MathJax.Hub.Queue(["Text",math,input]);
             },
 
+            //inserts the math expression as an image into the original editor window and closes the popup
+            //the LaTeX for the formula is stored in the alt text of the image
             window.finish = function() {
-                tinyMCEPopup.editor.execCommand('mceInsertContent', false, '<img src="http://localhost:8080/math/totex?tex=' + tinyMCE.activeEditor.getContent().replace(/<[^>]*>?/g, '').replace(/[+]/g, '%2B').replace(/[*]/g, '\\cdot').replace(/(\d+)[/](\d+)/g, '\\frac{$1}{$2}').replace(/[/]/g, '\\div').replace(/&nbsp;/g, '').replace(/[^]/g, '%5E') + '&size=12" />');
+                tinyMCEPopup.editor.execCommand('mceInsertContent', false, '<img src="http://localhost:8080/math/totex?tex=' + tinyMCE.activeEditor.getContent().replace(/<[^>]*>?/g, '').replace(/[+]/g, '%2B').replace(/[*]/g, '\\cdot').replace(/(\d+)[/](\d+)/g, '\\frac{$1}{$2}').replace(/[/]/g, '\\div').replace(/&nbsp;/g, '').replace(/[\^]/g, '%5E').replace(/[=]/g, '%3D') + '&size=12" alt="' + tinyMCE.activeEditor.getContent().replace(/<[^>]*>?/g, '').replace(/[*]/g, '\\cdot').replace(/(\d+)[/](\d+)/g, '\\frac{$1}{$2}').replace(/[/]/g, '\\div').replace(/&nbsp;/g, '') + '" />');
                 tinyMCEPopup.close();
             }
         })();
@@ -40,17 +44,8 @@
 </span>
 
 <div class="mceActionPanel">
-		<input type="button" id="insert" name="insert" value="Insert" onclick="finish()" />
-		<input type="button" id="cancel" name="cancel" value="Cancel" onclick="tinyMCEPopup.close();" />
+		<input type="button" id="insert" name="insert" value="Insert" onclick="finish()" onmouseover="RenderTeX()" />
+		<input type="button" id="cancel" name="cancel" value="Cancel" onclick="tinyMCEPopup.close();" onmouseover="RenderTeX()" />
 	</div>
-
-<script type="text/javascript">
-if (MathJax.Hub.Browser.isMSIE) {
-    window.input.onkeypress = function () {
-    if (window.event && window.event.keyCode === 13) {this.blur(); this.focus()}
-  }
-}
-</script>
-
 </body>
 </html>
