--- a/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/sumMenu.html
+++ b/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/sumMenu.html
@@ -22,7 +22,7 @@
     <p>Create a sum:</p>
     <p>Top: <input id="top" name="top" type="text" class="text" /></p>
     <p>Bottom: <input id="bottom" name="bottom" type="text" class="text" /></p>
-    <p>Term: <input id="term" name="term" type="term" class="term" /></p>
+    <p>Term: <input id="term" name="term" type="text" class="text" /></p>
 
     <div class="mceActionPanel">
 		<input type="button" id="insert" name="insert" value="Insert" onclick="finish();" />
