--- a/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
+++ b/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
@@ -13,8 +13,9 @@
             plugins : "mathematik",
 
             //remove old/confusing buttons, add Mathematik buttons
-            theme_advanced_disable : "hr,removeformat,visualaid,sub,sup,charmap",
-            theme_advanced_buttons3 : "squareroot,fraction,|,sumpopup,prodpopup,|,exp,subsc,|,greek"
+            theme_advanced_buttons1 : "squareroot,fraction,|,sumpopup,prodpopup,|,exp,subsc,|,greek,|,log,ln,logb,|,approx,box",
+            theme_advanced_buttons2 : "lieb, newt,|,indef,def",
+            theme_advanced_buttons3 : ""
         });
     </script>
     <script type="text/javascript">
