More changes to make sites work.

--- a/src/main/webapp/sites/createSite.html
+++ b/src/main/webapp/sites/createSite.html
@@ -7,7 +7,7 @@
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
       <head_merge><title>Create Site</title></head_merge>
-      <div class="lift:CreateSite" />
+      <div class="lift:CreateSite"></div>
     </div>
   </body>
 </html>
