--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -112,6 +112,8 @@
 	    />
     </div>
 
+    <div class="lift:Msgs"></div>
+
     <div class="contentArea">
         <div id="content">The main content will get bound here</div>
     </div>
