--- a/src/main/webapp/templates-hidden/wizard-all.html
+++ b/src/main/webapp/templates-hidden/wizard-all.html
@@ -2,8 +2,8 @@
   <wizard:screen_info><div>Page <wizard:screen_number></wizard:screen_number> of <wizard:total_screens></wizard:total_screens></div></wizard:screen_info>
   <wizard:wizard_top> <div> <wizard:bind></wizard:bind> </div> </wizard:wizard_top>
   <wizard:screen_top> <div> <wizard:bind></wizard:bind> </div> </wizard:screen_top>
-  <wizard:errors class="ui-state-error" id="errors"> <div><span class="ui-icon ui-icon-alert" id="errorIcon">  </span> <ul class="errorList"> <wizard:item> <li> <wizard:bind></wizard:bind> </li> </wizard:item> </ul> </div> </wizard:errors>
-  <div class="formBody">
+    <wizard:errors> <div> <ul> <wizard:item> <li> <wizard:bind></wizard:bind> </li> </wizard:item> </ul> </div> </wizard:errors>
+    <div>
     <wizard:fields>
       <table>
 	<tbody>
@@ -37,7 +37,7 @@
       </table>
     </wizard:fields>
   </div>
-  <div class="formBody">
+  <div>
     <table>
       <tr> 
 	<td>
