--- a/src/main/webapp/tinymce.html
+++ b/src/main/webapp/tinymce.html
@@ -1,12 +1,26 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>TinyMCE</title>
+<title>TinyMCE</title>
+<script id="jquery" src="/classpath/js/jquery-1.5.1.min.js" type="text/javascript"></script>
+<script id="jquery-ui" src="/classpath/js/jquery-ui-1.8.14.custom.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/classpath/tinymce/jscripts/tiny_mce/jquery.tinymce.js"></script>
+<script type="text/javascript" src="/classpath/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
+<script type="text/javascript">
+$(function() {
+   $('textarea.mceEditor').tinymce({
+      theme : "advanced",
+      theme_advanced_toolbar_location : "top",
+      theme_advanced_toolbar_align : "left"
+    });
+})
+</script>
 </head>
-<body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=default;at=content">
-    <span class="lift:TinyMCE"></span>
-</div>
+<body>
+<h2>Testing TinyMCE</h2>
+
+<form method="post" action=".">
+    <textarea rows="10" cols="80" name="stuff" class="mceEditor">Text here.</textarea>
+    <textarea rows="10" cols="80" name="more-stuff">Not TinyMCE</textarea>
+</form>
 </body>
 </html>
