--- a/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
+++ b/src/main/resources/toserve/tinymce/jscripts/tiny_mce/plugins/mathematik/insertMenu.html
@@ -14,7 +14,7 @@
 
             //remove old/confusing buttons, add Mathematik buttons
             theme_advanced_buttons1 : "squareroot,fraction,|,sumpopup,prodpopup,|,exp,subsc,|,greek,|,log,ln,logb,|,approx,box",
-            theme_advanced_buttons2 : "lieb, newt,|,indef,def",
+            theme_advanced_buttons2 : "lieb, newt,|,indef,def,|,infty,pm",
             theme_advanced_buttons3 : ""
         });
     </script>
