--- a/src/main/webapp/sites/addPage.html
+++ b/src/main/webapp/sites/addPage.html
@@ -7,7 +7,7 @@
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
       <head_merge><title>Add Page</title></head_merge>
-      <h2>Edit Page</h2>
+      <h2>Add Page</h2>
       <div class="lift:AddPage" ></div>
     </div>
   </body>
