Tree Nav now works from a snippet and pulls data from xml

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -17,85 +17,15 @@
     <link rel="stylesheet" media="screen" href="/classpath/css/superfish.css" />
 </head>
 <body>
+
 <div id="container">
+
+    <div class="lift:TreeNav"> </div>
     
     <div id="leftBar">
         <a href="/index" class="logoLink"><img src="/images/jcps-logo.png" alt="Logo" width="150px" class="logo"></a>
 
         <div id="navTree">
-        <ul>
-          <li><a href="#">Arts/Humanities</a>
-
-          <ul>
-            <li><a href="#">Art</a></li>
-            <li><a href="#">Music</a>
-            <ul>
-              <li><a href="#">Broadway</a></li>
-              <li><a href="#">Classical</a></li>
-              <li><a href="#">Jazz</a></li>
-
-              <li><a href="#">Opera</a></li>
-              <li><a href="#">Popular</a></li>
-            </ul></li>
-            <li><a href="#">Mythology</a></li>
-            <li><a href="#">Philosophy/Theology</a></li>
-          </ul></li>
-          <li><a href="#">Language Arts</a>
-
-          <ul>
-            <li><a href="#">Grammar</a></li>
-            <li><a href="#">Literature</a>
-            <ul>
-              <li><a href="#">American</a></li>
-              <li><a href="#">English</a></li>
-              <li><a href="#">European</a></li>
-
-              <li><a href="#">World</a></li>
-            </ul></li>
-          </ul></li>
-          <li><a href="#">Mathematics</a>
-          <ul>
-            <li><a href="#">Algebra</a></li>
-            <li><a href="#">Calculus</a></li>
-
-            <li><a href="#">Geometry</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Trigonometry</a></li>
-          </ul></li>
-          <li><a href="#">Miscellaneous</a>
-          <ul>
-            <li><a href="#">Pop Culture</a></li>
-
-            <li><a href="#">Sports</a></li>
-          </ul></li>
-          <li><a href="#">Science</a>
-          <ul>
-            <li><a href="#">Astronomy</a></li>
-            <li><a href="#">Biology</a></li>
-            <li><a href="#">Chemistry</a></li>
-
-            <li><a href="#">Earth Science</a></li>
-            <li><a href="#">Medicine/Anatomy</a></li>
-            <li><a href="#">Physics</a></li>
-          </ul></li>
-          <li><a href="#">Social Studies</a>
-          <ul>
-            <li><a href="#">Anthropology</a></li>
-
-            <li><a href="#">Economics</a></li>
-            <li><a href="#">Geography</a></li>
-            <li><a href="#">History</a>
-            <ul>
-              <li><a href="#">American</a></li>
-              <li><a href="#">Ancient</a></li>
-
-              <li><a href="#">European</a></li>
-              <li><a href="#">World</a></li>
-            </ul></li>
-            <li><a href="#">Psychology</a></li>
-            <li><a href="#">Sociology</a></li>
-          </ul></li>
-        </ul>
 
         </div>
 
