Got a very basic teacher schedule working

--- a/src/main/webapp/courses/teacherSchedule.html
+++ b/src/main/webapp/courses/teacherSchedule.html
@@ -15,13 +15,11 @@
             <tr>
                 <th>Period</th>
                 <th>Course</th>
-                <th>Teacher(s)</th>
                 <th>Room</th>
             </tr>
             <tr class="list">
-                <td class="period">Red 1</td>
+                <td class="periods">Red 1</td>
                 <td class="course">Intro to Basket-Weaving</td>
-                <td class="teachers">Smith, Jones</td>
                 <td class="room">242B</td>
             </tr>
         </table>
