Title on teacher schedule now works

--- a/src/main/webapp/courses/teacherSchedule.html
+++ b/src/main/webapp/courses/teacherSchedule.html
@@ -8,7 +8,7 @@
   <div id="main">
     <div class="lift:surround?with=default;at=content">
       <div class="lift:TeacherSchedule">
-        <head_merge><title>Schedule for <span class="name">Bob Loblaw</span></title></head_merge>
+          <div class="scheduleTitlePlaceholder">Bob Loblaw</div>
         <h2>Schedule for <span class="name">Bob Loblaw</span></h2>
 
         <table border="1">
