pulled from master and played with templates (managed to break them)

--- a/src/main/webapp/courses/teacherSchedule.html
+++ b/src/main/webapp/courses/teacherSchedule.html
@@ -5,10 +5,9 @@
     <title>Schedule for ___</title>
   </head>
   <body class="lift:content_id=main">
-  <div id="main">
-    <div class="lift:surround?with=default;at=content">
+    <div class="lift:surround?with=default;at=content" id="main">
       <div class="lift:TeacherSchedule">
-          <div class="scheduleTitlePlaceholder">Bob Loblaw</div>
+        <div class="lift:Head"><title>Schdule for <span class="name">Bob Loblaw</span></title></div>
         <h2>Schedule for <span class="name">Bob Loblaw</span></h2>
 
         <table border="1">
@@ -25,6 +24,5 @@
         </table>
       </div>
     </div>
-  </div>
   </body>
 </html>
