--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -1,4 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:lift="http://liftweb.net/">
+<!DOCTYPE HTML>
+<html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="description" content=""/>
@@ -12,9 +13,9 @@
 
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="/classpath/css/jquery-ui-1.8.14.custom.css" type="text/css"/>
-    <link rel="stylesheet" href="/classpath/css/eschool.css" type="text/css"/>
-    <link rel="stylesheet" media="screen" href="/classpath/css/superfish.css" />
+    <link rel="stylesheet" href="/classpath/css/jquery-ui-1.8.14.custom.css" type="text/css"></link>
+    <link rel="stylesheet" href="/classpath/css/eschool.css" type="text/css"></link>
+    <link rel="stylesheet" media="screen" href="/classpath/css/superfish.css"></link>
 </head>
 <body>
 
@@ -24,22 +25,13 @@
     
     <div id="leftBar">
         <a href="/index" class="logoLink"><img src="/images/jcps-logo.png" alt="Logo" width="150px" class="logo"></a>
-
-        <div id="navTree">
-
-        </div>
-
+        <div id="navTree"></div>
     </div>
 
     <div id="header"><div class="lift:UserLoginInfo"></div></div>
 
     <div class="NavBar">
-	    <Lift:Menu.builder
-            expandAll="true"
-            linkToSelf="true"
-            ul:id="MenuList"
-            ul:class="sf-menu"
-	    />
+	    <div class="lift:Menu.builder?expandAll=true;linkToSelf=true;ul:id=MenuList;ul:class=sf-menu;"></div>
     </div>
 
     <div class="contentArea">
