Added student schedule snippet

--- a/src/main/webapp/courses/studentSchedule.html
+++ b/src/main/webapp/courses/studentSchedule.html
@@ -1,10 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
+    <title>Schedule for ___</title>
+  </head>
+  <body class="lift:content_id=main">
+    <div class="lift:surround?with=default;at=content" id="main">
+      <div class="lift:StudentSchedule">
+        <div class="lift:Head"><title>Schdule for <span class="name">Bob Loblaw</span></title></div>
+        <h2>Schedule for <span class="name">Bob Loblaw</span></h2>
 
-</body>
+        <table border="1">
+            <tr>
+                <th>Period</th>
+                <th>Course</th>
+                <th>Room</th>
+            </tr>
+            <tr class="list">
+                <td class="periods">Red 1</td>
+                <td class="course">Intro to Basket-Weaving</td>
+                <td class="room">242B</td>
+            </tr>
+        </table>
+      </div>
+    </div>
+  </body>
 </html>
