--- a/src/main/webapp/courses/teacherSchedule.html
+++ b/src/main/webapp/courses/teacherSchedule.html
@@ -17,9 +17,9 @@
                 <th>Room</th>
             </tr>
             <tr class="list">
-                <td class="periods">Red 1</td>
-                <td class="course">Intro to Basket-Weaving</td>
-                <td class="room">242B</td>
+                <td class="period">Red 1</td>
+                <td class="courses">Intro to Basket-Weaving</td>
+                <td class="rooms">242B</td>
             </tr>
         </table>
       </div>
