modified hrefs to use Menu.item instead of hard-coded URLs

--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -9,7 +9,7 @@
         <head_merge><title>Error!</title></head_merge>
         <h1>Error!</h1>
 
-        <p>Click to return <a href="/index">Home</a>.</p>
+        <p>Click to return <span class="lift:Menu.item?name=Home">Home</span>.</p>
 
         <div class="lift:Msgs"></div>
     </div>
