--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -24,7 +24,7 @@
     <div class="lift:TreeNav"> </div>
     
     <div id="leftBar">
-        <a href="/index" class="logoLink"><img src="/images/jcps-logo.png" alt="Logo" width="150px" class="logo"></a>
+        <span class="lift:Menu.item?name=Home;donthide=true;a:class=logolink"><img src="/images/jcps-logo.png" alt="Logo" width="150px" class="logo"></span>
         <div id="navTree"></div>
     </div>
 
