fixed name for Change Password page

--- a/src/main/webapp/users/settings.html
+++ b/src/main/webapp/users/settings.html
@@ -8,7 +8,7 @@
     <div id="main" class="lift:surround?with=default;at=content">
       <head_merge><title>Settings</title></head_merge>
       <div class="lift:UserSettings"></div>
-        <p>Click <span class="lift:Menu.item?name=Change Password">here</span> to change your password.</p>
+        <p>Click <span class="lift:Menu.item?name=users.change_password">here</span> to change your password.</p>
     </div>
   </body>
 </html>
